--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <body>
     <!-- SECCION INICIO -->
 
-  <!-- SECCION CONTACTO -->
+  <!-- SECCION CONTACTO-->
   <section class="contacto" id="contacto">
       <div class="contenido-seccion">
         <h2 class="titulo-seccion">Ponte en contacto ahora mismo!</h2>
@@ -35,14 +35,14 @@
                 <textarea name="mensaje" id="mensaje" placeholder="Ingresa algun comentario que tengas" class="campo" required></textarea>
                 </div>
                 <div class="camp">
-                    <div class="g-recaptcha" data-sitekey="6Le3zugpAAAAAIo79WhdE_PRq4REJOTXhkLm5444"></div>
+                <!--    <div class="g-recaptcha" data-sitekey="6Le3zugpAAAAAIo79WhdE_PRq4REJOTXhkLm5444"></div>-->
                 </div>
                 <input type="submit" name="enviar" value="Enviar Datos" class="btn-enviar">
             </section>
         </form>
       </div>
   </section>
-  <script src="/javascripts/captcha.js"></script>
+  <!-- <script src="/javascripts/captcha.js"></script>-->
   <script src="../app.js"></script>
   </body>
 </html>
